# qvpic

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  manual-testpypi.yml  nightly.yml  publish.yml  release.yml
.run/: control_station.run.xml
checkpoints/: pic_conduit_final.pt  pic_test_latest.pt
configs/: default.yaml
docs/: QVPIC_Whitepaper.md  VQC_NonProvisional_Patent_Application.md  non_technical_QVPIC_whitepaper.md  qvpic_paper.md
facts/: private_facts.json  public_facts.json
scripts/: agent.py  agent_demo.py  heartbeat.py  main.py  qvpic_test.py  setup_identity.py  ui.py
src/: conduit.py  config.py  encryption.py  vqc_enhanced_conduit.py
tests/: test_conduit.py  test_encoder_decoder.py  test_qvpic.py
