[project]
name = "qvpic"
version = "10.2.0"
description = "Quaternion Vortex Persistent Identity Conduit — Topological memory + OAM + sheaf TNN"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Aaron Michael Kinder", email = "kinaar0@protonmail.com"}]
keywords = ["topological-neural-network", "oam", "quaternion", "persistent-memory", "vqc", "sheaf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.4.0",
    "numpy>=1.21.0",
    "scipy>=1.10.0",
    "matplotlib>=3.5.0",
    "omegaconf>=2.3.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
    "gradio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "isort>=5.0.0",
    "ruff>=0.0.0",
]

[project.scripts]
qvpic-agent = "scripts.agent_demo:main"
qvpic-test  = "scripts.qvpic_test:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"