[project]
name = "qvpic"
version = "10.2.0"
description = "Quaternion Vortex Persistent Identity Conduit — Topological memory + OAM + sheaf TNN"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Aaron Michael Kinder", email = "kinaar0@protonmail.com"}]
keywords = ["topological-neural-network", "oam", "quaternion", "persistent-memory", "vqc", "sheaf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[build-system]
requires = ["setuptools >= 45", "wheel"]
build-backend = "setuptools.build_meta"

dependencies = [
    "torch>=2.4.0",
    "numpy>=1.21.0",
    "scipy>=1.10.0",
    "matplotlib>=3.5.0",
    "omegaconf>=2.3.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.60.0",
    "gradio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.0.0",
    "ruff>=0.0.0",
]

[project.scripts]
qvpic-agent = "scripts.agent_demo:main"
qvpic-test  = "scripts.qvpic_test:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I", "UP", "RUF"]
ignore = []

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --strict-config --cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=20"
testpaths = ["tests", "src", "scripts"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
